--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "nodemen",
         "start:dev": "nodemon",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "lint": "eslint --fix"
     },
     "author": "Andrei Auchynnikau",
     "keywords": [],
