--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "moduleResolution": "Node",
     "noUncheckedIndexedAccess": true,
     "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "outDir": "dist",
     "removeComments": true,
     "resolveJsonModule": true,
