--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "nodemen",
         "start:dev": "nodemon",
+        "start:node": "ts-node index.ts",
         "lint": "eslint --fix"
     },
     "author": "Andrei Auchynnikau",
