--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "description": "Template for the WebSocket remote control task",
     "main": "index.js",
     "scripts": {
-        "start": "nodemen",
+        "start": "ts-node index.ts",
         "start:dev": "nodemon",
-        "start:node": "ts-node index.ts",
         "lint": "eslint --fix"
     },
     "author": "Andrei Auchynnikau",
